edited css for responsivness

--- a/src/Components/BodyComponents/ProjectComponents/ProjectCounterMedia.css
+++ b/src/Components/BodyComponents/ProjectComponents/ProjectCounterMedia.css
@@ -1,4 +1,193 @@
-@media (min-width:240px) {
+
+@media (min-width:260px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+           width: 90vw;
+           margin:2rem 0rem;
+           border: none;
+           /* border: 1px solid red; */
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
+}
+@media (min-width:280px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+           width: 90vw;
+           margin:2rem 0rem;
+           border: none;
+           /* border: 1px solid red; */
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
+}
+
+@media (min-width:300px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
+}
+@media (min-width:310px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
+}
+@media (min-width:345px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
+}
+@media (min-width:354px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
+}
+@media (min-width:360px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+       }
+           
 }
 @media (min-width:370px) {
     .project-counter{
@@ -54,6 +243,64 @@
        }
            
 }
+@media (min-width:400px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid red; */
+           width: 78vw;
+           margin: 1rem 0rem;
+           justify-content: center;
+
+           
+       }
+           
+}
+@media (min-width:500px) {
+    .project-counter{
+        width:100%;
+        /* border: 1px solid red; */
+        padding: 2rem 0rem;
+        border-bottom: 1px solid #3B4053;
+        
+       }
+       
+       .project-inner-box{
+        /* border: 1px solid red; */
+           width: 80vw;
+           margin:2rem 0rem;
+           border: none;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2rem;
+       }
+       
+       .project-display{
+        /* border: 1px solid rgb(250, 219, 219); */
+           width: 78vw;
+           margin: 1rem 0rem;
+           justify-content: center;
+       }
+           
+}
 @media (min-width: 640px) {
     .project-counter{
         width:100%;
@@ -69,6 +316,7 @@
            width: 80vw;
            margin:3rem 0rem;
            border: none;
+
        }
        .pro-heading{
         /* border: 1px solid red; */
@@ -114,7 +362,7 @@
 
 @media (min-width: 1024px) {
     .project-counter{
-        width:99vw;
+        width:100%;
         /* border: 1px solid red; */
         padding: 2rem 0rem;
         border-bottom: none;
@@ -143,7 +391,7 @@
 
 @media (min-width: 1280px) {
     .project-counter{
-        width:99vw;
+        width:100%;
         /* border: 1px solid red; */
         padding: 1rem 0rem;
         /* border-bottom: none; */
@@ -204,6 +452,37 @@
            margin: 1rem 0rem;
        }
 }
+@media (min-width: 1550px) {
+    .project-counter{
+        width:99vw;
+        /* border: 1px solid red; */
+        padding: 1rem 0rem;
+        /* border-bottom: none; */
+       }
+       
+       .project-inner-box{
+           width: 70vw;
+           margin:5rem 0rem;
+           padding: 1rem 0rem;
+           /* border: none; */
+           /* border: 1px solid red; */
+           border: 1px solid #3B4053;
+       }
+       .pro-heading{
+        /* border: 1px solid red; */
+           font-size: 2.2rem;
+           padding: 1rem ;
+       }
+       
+       .project-display{
+        /* border: 1px solid red;  */
+        width: 68vw;
+           flex-direction:row;
+           justify-content: space-evenly;
+
+           margin: 1rem 0rem;
+       }
+}
 @media (min-width: 1600px) {
     .project-counter{
         width:99vw;
@@ -216,7 +495,7 @@
            width: 70vw;
            margin:5rem 0rem;
            padding: 1rem 0rem;
-           border: none;
+           border: 1px solid #3B4053;
            /* border: 1px solid red; */
            /* border: 1px solid #3B4053; */
        }
