--- a/src/Components/BodyComponents/AboutComponents/About.css
+++ b/src/Components/BodyComponents/AboutComponents/About.css
@@ -14,6 +14,7 @@
 .about-inner {
   height: 50vh;
   width: 63vw;
+  margin: 3rem 0rem;
   border: 1px solid #3b4053;
   display: flex;
   flex-direction: row;
@@ -49,6 +50,7 @@
 /* ----- */
 .about-intro {
   height: auto;
+
   width: 40rem;
   /* border: 1px solid white; */
   color: white;
@@ -61,9 +63,9 @@
  /* justify-content: space-evenly; */
 }
 .about-title {
-  color: #615add;
+  color: #fbfbff;
   font-size: 2.2rem;
-  font-weight: 600;
+  font-weight: 500;
   padding: 0.5rem;
   text-align: center;
   text-transform: capitalize;
