--- a/src/Components/FooterComponents/Footer.css
+++ b/src/Components/FooterComponents/Footer.css
@@ -1,7 +1,6 @@
 .footer-text-box{
-    /* border-top: 1px solid  #12161f; */
-    /* background-color: #14192F;; */
-    background-color: transparent;
+    background-color: #14192F;;
+    /* background-color: transparent; */
     height: 6vh;
     width: 99vw;
     display: flex;
@@ -10,9 +9,10 @@
     align-items: center;
     justify-content: center;
     z-index: 1;
-    -webkit-backdrop-filter: blur(12px);
-backdrop-filter: blur(12px);
+    /* -webkit-backdrop-filter: blur(12px); */
+/* backdrop-filter: blur(12px); */
 border-top: 1px solid #3B4053;
+/* border: 1px solid red; */
 }
 .footer-text-box span {
     /* color: white; */
@@ -25,3 +25,4 @@ border-top: 1px solid #3B4053;
     padding: 0px 2px;
     color: red;
 }
+
